manifests/fargate/fargate-ab3-alb/#02-ab3-app-Deployment-and-NodePortService.yml
#02-ab3-app-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ab3-app-deployment
  labels:
    app: ab3-app
  namespace: fp-dev 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ab3-app
  template:
    metadata:
      labels:
        app: ab3-app
    spec:
      containers:
        - name: ab3-app
          image: public.ecr.aws/i1b1y7y0/php-apache:8.0.3
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"                         
---
apiVersion: v1
kind: Service
metadata:
  name: ab3-app-service
  labels:
    app: ab3-app
  namespace: fp-dev  
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path:
spec:
  type:
  selector:
    app: ab3-app
  ports:
    - port: 80
      targetPort: 80
